--- a/Views/Attraction/DisplayInfoes.cshtml
+++ b/Views/Attraction/DisplayInfoes.cshtml
@@ -50,7 +50,7 @@
 
         
 
-    <div class="navbar d-flex justify-content-center align-items-center">
+    <div class="navbar2 d-flex justify-content-center align-items-center">
         <div class="w-50 d-flex justify-content-center align-items-center">
             <a href="#restaurants">رستوران‌ها</a>
             <a href="#hotels">هتل‌ها</a>
