--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -495,3 +495,9 @@ div img:hover {
     display: block;
     text-decoration: none;
 }
+
+.card-img-top img{
+    width:100%;
+    height:200px;
+    object-fit:cover;
+}
